kubernetes/ingress/hospital-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hospital-ingress
  namespace: hospital

spec:
  ingressClassName: nginx

  rules:
    - host: hospital.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 8081
